# daily-standup-bot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  discord_bot.py  generate_report.py  pyproject.toml  requirements.txt  team.json.example
.github/workflows/: daily-standup.yml
capture-jobcard/: Makefile  converter.py  gsheet.py  main.py  project.md  requirements.txt
