[project]
name = "daily-standup-bot"
version = "2.0.0"
description = "Automated daily stand-up bot — JIRA summaries + Google Sheets job cards → Discord"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
    "google-auth>=2.20.0",
]
